--- a/frontend/assets/styles/style.css
+++ b/frontend/assets/styles/style.css
@@ -1,6 +1,6 @@
 html, body {
     /*background: #435058;*/
-    background-image: linear-gradient(135deg, #777f83 0%, #c7ce6e 100%);
+    background-image: linear-gradient(135deg, #4f6c7e 0%, #6e704a 100%);
     background-repeat: no-repeat;
     background-size: cover;
 
@@ -19,26 +19,15 @@ html, body {
     margin: 0;
     padding: 0;
 
-    color: #474343;
-}
-
-#light {
-    position: absolute;
-    width: 500px;
-    height: 500px;
-    box-shadow: inset 0 0 100px 100px #435058;
-    border-radius: 50%;
-    border-color: #435058;
-    box-sizing: calc(10px);
-    background: #474343;
-    z-index: 10;
+    color: #fff;
 }
 
 .notfound {
+    margin: auto;
     text-align: center;
 }
 
 a:link, a:visited, a:hover, a:active {
-    color: #474343;
-    
+    color: #fff;
+    text-decoration: none;
 }
