--- a/frontend/assets/styles/style.css
+++ b/frontend/assets/styles/style.css
@@ -1,6 +1,5 @@
 html, body {
     /*background: #435058;*/
-    background-image: linear-gradient(135deg, #4f6c7e 0%, #6e704a 100%);
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
@@ -19,8 +18,6 @@ html, body {
 
     margin: 0;
     padding: 0;
-
-    color: #fff;
 }
 
 .notfound {
@@ -28,7 +25,16 @@ html, body {
     text-align: center;
 }
 
-a:link, a:visited, a:hover, a:active {
-    color: #fff;
-    text-decoration: none;
+@media (prefers-color-scheme: light) {
+    body {
+        color: var(--textcolor);
+        background-image: linear-gradient(135deg, #698394 0%, #aeb356 100%);
+    }
+}
+
+@media (prefers-color-scheme: dark) {
+    body {
+        color: var(--textcolor);
+        background-image: linear-gradient(135deg, #535e66 0%, #73754c 100%);
+    }
 }
