--- a/frontend/assets/styles/style.css
+++ b/frontend/assets/styles/style.css
@@ -38,3 +38,11 @@ html, body {
         background-image: linear-gradient(135deg, #535e66 0%, #73754c 100%);
     }
 }
+
+.wrapper {
+    min-height: 100%;
+}
+
+.main {
+    padding: 1em;
+}
