--- a/frontend/assets/styles/style.css
+++ b/frontend/assets/styles/style.css
@@ -1,3 +1,17 @@
+:root {
+    --background-dark-color-begin: #535e66;
+    --background-dark-color-end: #73754c;
+
+    --background-light-color-begin: #698394;
+    --background-light-color-end: #aeb356;
+}
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }  
+
 html, body {
     /*background: #435058;*/
     background-repeat: no-repeat;
@@ -25,24 +39,30 @@ html, body {
     text-align: center;
 }
 
-@media (prefers-color-scheme: light) {
-    body {
-        color: var(--textcolor);
-        background-image: linear-gradient(135deg, #698394 0%, #aeb356 100%);
-    }
-}
-
-@media (prefers-color-scheme: dark) {
-    body {
-        color: var(--textcolor);
-        background-image: linear-gradient(135deg, #535e66 0%, #73754c 100%);
-    }
-}
-
 .wrapper {
     min-height: 100%;
 }
 
 .main {
     padding: 1em;
+}
+
+@media (prefers-color-scheme: light) {
+    body {
+        color: var(--textcolor);
+        background-image: linear-gradient(135deg, var(--background-light-color-begin) 0%, var(--background-light-color-end) 100%);
+    }
+}
+
+@media (prefers-color-scheme: dark) {
+
+    body {
+        color: var(--textcolor);
+        background-image: linear-gradient(135deg, var(--background-dark-color-begin) 0%, var(--background-dark-color-end) 100%);
+    }
+
+    /* Make SVGs visible in dark */
+    img[src$=".svg"] {
+        background-color: var(--background-dark-color-begin);
+    }
 }
