--- a/frontend/assets/styles/style.css
+++ b/frontend/assets/styles/style.css
@@ -47,6 +47,12 @@ html, body {
     padding: 1em;
 }
 
+.box {
+    backdrop-filter: blur(7px);
+    color: var(--textcolor);
+    border-radius: 10px;
+}
+
 @media (prefers-color-scheme: light) {
     body {
         color: var(--textcolor);
