--- a/frontend/assets/styles/style.css
+++ b/frontend/assets/styles/style.css
@@ -47,15 +47,16 @@ html, body {
     padding: 1em;
 }
 
-.box {
+.carousel-caption {
     backdrop-filter: blur(7px);
-    color: var(--textcolor);
     border-radius: 10px;
+    color: white !important;
+    font-weight: bold;
 }
 
 @media (prefers-color-scheme: light) {
     body {
-        color: var(--textcolor);
+        color: white;
         background-image: linear-gradient(135deg, var(--background-light-color-begin) 0%, var(--background-light-color-end) 100%);
     }
 }
@@ -63,7 +64,7 @@ html, body {
 @media (prefers-color-scheme: dark) {
 
     body {
-        color: var(--textcolor);
+        color: white;
         background-image: linear-gradient(135deg, var(--background-dark-color-begin) 0%, var(--background-dark-color-end) 100%);
     }
 
