Update ContactForm layout and add TODO comment for hardcoded images

--- a/public-frontend/assets/styles/style.css
+++ b/public-frontend/assets/styles/style.css
@@ -2,7 +2,7 @@
     --background-dark-color-begin: #40474d;
     --background-dark-color-end: #15545e;
 
-    --background-light-color-begin: #8095a3;
+    --background-light-color-begin: #8da1ad;
     --background-light-color-end: #207e79;
 }
 
